Add initial project structure and integrate MarkdownKit dependency

--- a/UIdemo/Example/Podfile
+++ b/UIdemo/Example/Podfile
@@ -9,6 +9,7 @@ target 'UIdemo_Example' do
   pod 'Masonry'
   pod 'WebViewJavascriptBridge'
   pod 'GCDWebServer'
+  pod 'MarkdownKit'
   
   target 'UIdemo_Tests' do
     inherit! :search_paths
