Add MCPServerManager for managing MCP server operations
- Implemented MCPServerManager class with singleton pattern.
- Added methods to start and stop the MCP server.
- Configured MCP server with port and allowed hosts.
- Registered a click tool with parameters for x and y coordinates.
- Implemented click simulation on the specified coordinates.
- Added Podfile to include MCP Swift SDK dependency.
- Generated necessary Podfile.lock and Manifest.lock files.
- Created initial test.swift file for future testing.
- Updated project settings and configurations for CocoaPods integration.

--- a/MCP_Demo/MCP_Demo/Info.plist
+++ b/MCP_Demo/MCP_Demo/Info.plist
@@ -21,5 +21,12 @@
 			</array>
 		</dict>
 	</dict>
+	<!-- 添加网络权限 -->
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>需要使用本地网络来启动MCP服务器</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_mcp._tcp</string>
+	</array>
 </dict>
 </plist>
